{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 415,
  "lineage": "dccd24ac-40be-b33b-69d5-472964b2cba2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-068b1ffa",
            "domain": "vpc",
            "id": "eipalloc-0a43b3a3f67d2b632",
            "network_interface": "eni-08de6e54ae8dbcb3b",
            "private_dns": "ip-192-168-0-100.ap-south-1.compute.internal",
            "private_ip": "192.168.0.100",
            "public_dns": "ec2-3-6-182-61.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.182.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Production-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0217a85e28e625474",
            "arn": "arn:aws:ec2:ap-south-1:349820254994:instance/i-06f99dec69d31bcf8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06f99dec69d31bcf8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "champ",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5dd9d31d6cf88cb",
            "private_dns": "ip-192-168-2-12.ap-south-1.compute.internal",
            "private_ip": "192.168.2.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c3a9266437f3f57b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ed5e8321b2320b71",
            "tags": {
              "Name": "backend"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-033142ff3083c27f2"
            ]
          },
          "dependencies": [
            "aws_security_group.backend",
            "aws_subnet.private-subnet-1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0217a85e28e625474",
            "arn": "arn:aws:ec2:ap-south-1:349820254994:instance/i-0829d2f291e808c37",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0829d2f291e808c37",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "champ",
            "monitoring": false,
            "primary_network_interface_id": "eni-002f101810ecbcbac",
            "private_dns": "ip-192-168-3-133.ap-south-1.compute.internal",
            "private_ip": "192.168.3.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08df6f7f4cf5c6898",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d1f30922abb5208b",
            "tags": {
              "Name": "database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07200dc6f1b09f622"
            ]
          },
          "dependencies": [
            "aws_security_group.sgdb",
            "aws_subnet.private-subnet-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0217a85e28e625474",
            "arn": "arn:aws:ec2:ap-south-1:349820254994:instance/i-001690ed722219bf6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-001690ed722219bf6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "champ",
            "monitoring": false,
            "primary_network_interface_id": "eni-081caa86606929c28",
            "private_dns": "ip-192-168-0-117.ap-south-1.compute.internal",
            "private_ip": "192.168.0.117",
            "public_dns": "ec2-13-233-84-47.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.84.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-035be5793cc003e80",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07a0b9446efdc3306",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dc45e596a95806ba"
            ]
          },
          "dependencies": [
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet-1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "production-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03bfb4d723f051298",
            "owner_id": "349820254994",
            "tags": {
              "Name": "Production-IGW"
            },
            "vpc_id": "vpc-0f0d10fd82d427256"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a43b3a3f67d2b632",
            "id": "nat-0bccff42cf72751ac",
            "network_interface_id": "eni-08de6e54ae8dbcb3b",
            "private_ip": "192.168.0.100",
            "public_ip": "3.6.182.61",
            "subnet_id": "subnet-07a0b9446efdc3306",
            "tags": {
              "Name": "Production-NAT-GW"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dbbf394cdf4f01191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0bccff42cf72751ac",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dbbf394cdf4f0119",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-gw-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03bfb4d723f051298",
            "id": "r-rtb-09536f5a82e2f51be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09536f5a82e2f51be",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.production-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dbbf394cdf4f0119",
            "owner_id": "349820254994",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0bccff42cf72751ac",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route-Table"
            },
            "vpc_id": "vpc-0f0d10fd82d427256"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09536f5a82e2f51be",
            "owner_id": "349820254994",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bfb4d723f051298",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "vpc_id": "vpc-0f0d10fd82d427256"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd1c863d8367922d",
            "route_table_id": "rtb-0dbbf394cdf4f0119",
            "subnet_id": "subnet-0ed5e8321b2320b71"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06780c250c162c93b",
            "route_table_id": "rtb-0dbbf394cdf4f0119",
            "subnet_id": "subnet-0d1f30922abb5208b"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0306b635c5ff5bffc",
            "route_table_id": "rtb-09536f5a82e2f51be",
            "subnet_id": "subnet-07a0b9446efdc3306"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020813726e3ed355c",
            "route_table_id": "rtb-09536f5a82e2f51be",
            "subnet_id": "subnet-005788c5c6a4b0715"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349820254994:security-group/sg-033142ff3083c27f2",
            "description": "Allow traffic from public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033142ff3083c27f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 8806,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8806
              }
            ],
            "name": "security-group-backend-app",
            "name_prefix": null,
            "owner_id": "349820254994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-backend-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0d10fd82d427256"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgdb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349820254994:security-group/sg-07200dc6f1b09f622",
            "description": "Allow traffic from public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07200dc6f1b09f622",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "security-group-database",
            "name_prefix": null,
            "owner_id": "349820254994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group-database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0d10fd82d427256"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349820254994:security-group/sg-0dc45e596a95806ba",
            "description": "Allow incoming Http and HTTPS connections \u0026 SSH from office ISP Public IP Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc45e596a95806ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "14.98.228.11/32"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "223.26.31.162/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-server-sg",
            "name_prefix": null,
            "owner_id": "349820254994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0d10fd82d427256"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349820254994:subnet/subnet-0ed5e8321b2320b71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0ed5e8321b2320b71",
            "map_public_ip_on_launch": false,
            "owner_id": "349820254994",
            "tags": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0f0d10fd82d427256"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349820254994:subnet/subnet-0d1f30922abb5208b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0d1f30922abb5208b",
            "map_public_ip_on_launch": false,
            "owner_id": "349820254994",
            "tags": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0f0d10fd82d427256"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349820254994:subnet/subnet-07a0b9446efdc3306",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-07a0b9446efdc3306",
            "map_public_ip_on_launch": false,
            "owner_id": "349820254994",
            "tags": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0f0d10fd82d427256"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349820254994:subnet/subnet-005788c5c6a4b0715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-005788c5c6a4b0715",
            "map_public_ip_on_launch": false,
            "owner_id": "349820254994",
            "tags": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0f0d10fd82d427256"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349820254994:vpc/vpc-0f0d10fd82d427256",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c551ba46a7322d48",
            "default_route_table_id": "rtb-0fd380399c269ca6c",
            "default_security_group_id": "sg-00c1ee8ff9a2d0aef",
            "dhcp_options_id": "dopt-beb2bad6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f0d10fd82d427256",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fd380399c269ca6c",
            "owner_id": "349820254994",
            "tags": {
              "Name": "production-vpc"
            }
          }
        }
      ]
    }
  ]
}